updated forms to use netlify

--- a/citizenship.html
+++ b/citizenship.html
@@ -197,7 +197,7 @@ Immigration help,">
                         Get Help Today
                     </h2>
                     <p class="paragraph-form paragraph-form--greencard align-middle my-30">Drop us a line and we’ll get back to you!</p>
-                    <form  class="form" name="form-citizenship" id="form__citizenship">
+                    <form  class="form" name="form-citizenship" netlify>
         
                         <div class="u-margin-bottom-medium">
                         </div>
