--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@
                     Contact
                 </h2>
                 <p class="paragraph-form--information my-30">We’d love to hear from you. Choose the most convenient method and we’ll get back to you as soon as we can.</p>
-                <form  class="form" name="form-contact" id="form__contact">
+                <form  class="form" name="form-contact" netlify>
 
                     <div class="u-margin-bottom-medium">
                     </div>
