--- a/greencard.html
+++ b/greencard.html
@@ -194,7 +194,7 @@ Immigration help,">
                                 Get Help Today
                             </h2>
                             <p class="paragraph-form paragraph-form--greencard align-middle my-30">Drop us a line and we’ll get back to you!</p>
-                            <form  class="form" name="form-greencard" id="form__greencard">
+                            <form  class="form" name="form-greencard" netlify>
             
                                 <div class="u-margin-bottom-medium">
                                 </div>
