--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     ASK OUR EXPERTS
                 </h2>
                 <p class="paragraph-form align-middle my-30">We are here to help you with your application process.</p>
-                <form  class="form" name="form-consultation" id="form__consultation" >
+                <form  class="form" name="form-consultation" netlify >
 
                     <div class="u-margin-bottom-medium">
                     </div>
@@ -666,7 +666,7 @@
             </p>
 
             <div class="form-wrapper">
-                <form  class="form" name="form-booking">
+                <form  class="form" name="form-booking" netlify>
                     
                     <div class="form-row-1 my-30">
                         <div class="form__group">
