--- a/visa.html
+++ b/visa.html
@@ -192,7 +192,7 @@ Immigration help,">
                         Get Help Today
                     </h2>
                     <p class="paragraph-form paragraph-form--greencard align-middle my-30">Drop us a line and we’ll get back to you!</p>
-                    <form  class="form" name="form-visa" id="form__visa">
+                    <form  class="form" name="form-visa" netlify>
         
                         <div class="u-margin-bottom-medium">
                         </div>
