--- a/citizenship.html
+++ b/citizenship.html
@@ -197,7 +197,7 @@ Immigration help,">
                         Get Help Today
                     </h2>
                     <p class="paragraph-form paragraph-form--greencard align-middle my-30">Drop us a line and we’ll get back to you!</p>
-                    <form  class="form" name="form-citizenship" netlify>
+                    <form  class="form" name="form-citizenship" id="form__citizenship" netlify>
         
                         <div class="u-margin-bottom-medium">
                         </div>
@@ -558,7 +558,7 @@ $('[data-ft]').flexTabs({
     const form = document.forms['form-citizenship']
     form.addEventListener('submit', e => {
       e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      fetch("/", { method: 'POST', body: new FormData(form)})
         .then(response => document.getElementById('form__citizenship').innerHTML = `<h1 class="success-message">Thank you for contacting us.<br/>You will get back to you as soon as possible</h1>`)
         .catch(error => console.error('Error!', error.message))
     })
