--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@
                     Contact
                 </h2>
                 <p class="paragraph-form--information my-30">We’d love to hear from you. Choose the most convenient method and we’ll get back to you as soon as we can.</p>
-                <form  class="form" name="form-contact" netlify>
+                <form  class="form" name="form-contact" id="form__contact" netlify>
 
                     <div class="u-margin-bottom-medium">
                     </div>
@@ -467,7 +467,7 @@ document.getElementById("btn-phone-number").addEventListener('click', textChange
     const form = document.forms['form-contact']
     form.addEventListener('submit', e => {
       e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      fetch("/", { method: 'POST', body: new FormData(form)})
         .then(response => document.getElementById('form__contact').innerHTML = `<h1 class="success-message">Thank you for contacting us.<br/>You will get back to you as soon as possible</h1>`)
         .catch(error => console.error('Error!', error.message))
     })
