--- a/greencard.html
+++ b/greencard.html
@@ -194,7 +194,7 @@ Immigration help,">
                                 Get Help Today
                             </h2>
                             <p class="paragraph-form paragraph-form--greencard align-middle my-30">Drop us a line and we’ll get back to you!</p>
-                            <form  class="form" name="form-greencard" netlify>
+                            <form  class="form" name="form-greencard" id="form__greencard" netlify>
             
                                 <div class="u-margin-bottom-medium">
                                 </div>
@@ -613,7 +613,7 @@ document.getElementById("btn-phone-number").addEventListener('click', textChange
     const form = document.forms['form-greencard']
     form.addEventListener('submit', e => {
       e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      fetch("/", { method: 'POST', body: new FormData(form)})
         .then(response => document.getElementById('form__greencard').innerHTML = `<h1 class="success-message">Thank you for contacting us.<br/>You will get back to you as soon as possible</h1>`)
         .catch(error => console.error('Error!', error.message))
     })
