map api changes

--- a/contact.html
+++ b/contact.html
@@ -274,8 +274,7 @@
                     </div>
                     
                     <script async defer
-                    src="https://maps.googleapis.com/maps/api/js?key=
-            AIzaSyCSzWSINBQvo4SyF28JLFlfbLLcCh8ApVg&callback=initMap">
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDQ4uTmdd8bQZsogQIbRxE6ZEdQ5PNMOE&callback=initMap">
                 </script>
             
                     <!--google map end-->
