--- a/greencard.html
+++ b/greencard.html
@@ -489,7 +489,7 @@ Immigration help,">
             <div class="footer__bottom">
                 <p class="footer__bottom-column">© 2020 
                     | All Rights Reserved |<span class="copyright-text"> Immigrant Resource Center Office</span></p>
-                <p class="footer__bottom-column"> Designed by <span class="copyright-text">Techzellence</span></a></p>
+                <p class="footer__bottom-column"> Powered by <span class="copyright-text">Techzellence</span></a></p>
                 <p class="footer__bottom-column"> <span class="copyright-text">Privacy Policye</span></p>
             </div>
            
