--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 OUR SERVICES
             </h2>
             <p class="paragraph-section align-middle my-20">
-                Preparing an entire immigration application is complex and you could face potential issues and major errors that could cost you thousands of dollars and even long delays or rejection in your process. We are here to help you with our <span class="service-21"> 21 years of experience</span> to take the complexity out of your filing and application process and at a very affordable rate.
+                Preparing an entire immigration application is complex and you could face potential issues and major errors that could cost you thousands of dollars and even long delays or rejection in your process. We are here to help you with our 23 years of experience to take the complexity out of your filing and application process and at a very affordable rate.
             </p>
 
             <div class="divider-image align-middle my-40">
@@ -782,7 +782,7 @@
                 <div class="footer__bottom">
                     <p class="footer__bottom-column">© 2020 
                         | All Rights Reserved |<span class="copyright-text"> Immigrant Resource Center Office</span></p>
-                    <p class="footer__bottom-column"> Designed by <span class="copyright-text">Techzellence</span></a></p>
+                    <p class="footer__bottom-column"> Powered by <span class="copyright-text">Techzellence</span></a></p>
                     <p class="footer__bottom-column"> <span class="copyright-text">Privacy Policye</span></p>
                 </div>
                
